--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -5,20 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de produtos</title>
-    <style type="text/css">
-         body{
-            background-color: black;
-         }
-         header{
-            background-color: aliceblue;
-            text-align: center;
-            font-size: 200%;
-         }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+         
 </head>
 <body>
-    <header>
-            <h1>Lista de Produtos</h1>
-    </header>
+    <div class="container bg-light mt-4">
+        <div>
+            <a class="btn - btn-primary m-2">
+                Voltar
+            </a>
+        <a th:href="@{/comercio/produtos/novo-produto}"class="btn - btn-primary m-2">
+            Novo produto
+        </a>
+        </div>
+    
+    <div>
+        <h2 class="my-5">Produtos </h2>
+   <table class="table table-striped table-responsive-md">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Código de barras</th>
+            <th>Preço</th>
+            <th>Editar</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+     </div> 
+    </div>
 </body>
 </html>
