--- a/src/main/resources/templates/novo-produto.html
+++ b/src/main/resources/templates/novo-produto.html
@@ -6,11 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novo Produto</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <div class="container bg-light mt-4">   
-    <h2>Cadastro de Produtos</h2>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous"> 
+    <h2 class="my-5">Cadastro de Produtos</h2>
 </div>  
 </head>
 <body>
-    
+    <main class="container bg-light mt-4">
+        <div class="container my-5">
+            <div>
+                <a th:href="@{/comercio/produtos/listar}" class="btn btn-primary my-2">
+                    <i class="fas fa-list ml-2">   </i>
+                        Todos Produtos
+                </a>
+                <h2>Novo Produto</h2>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
