--- a/src/main/resources/templates/produtos.html
+++ b/src/main/resources/templates/produtos.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de produtos</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
          
 </head>
 <body>
-    <div class="container bg-light mt-4">
+    <main class="container bg-light mt-4">
         <div>
-            <a class="btn - btn-primary m-2">
+            <a class="btn  btn-primary m-2">
+                <i class="fas fa-home ml-2"></i>
                 Voltar
             </a>
-        <a th:href="@{/comercio/produtos/novo-produto}"class="btn - btn-primary m-2">
+        <a th:href="@{/comercio/produtos/novo-prod}"class="btn btn-primary m-2">
+            <i class="fas fa-cart-plus ml-2"></i>
             Novo produto
         </a>
         </div>
@@ -28,6 +31,7 @@
             <th>Nome</th>
             <th>Código de barras</th>
             <th>Preço</th>
+            <th>Descrição</th>
             <th>Editar</th>
         </tr>
         </thead>
@@ -37,15 +41,17 @@
                      <td th:text="${produto.nome}"></td>
                      <td th:text="${produto.codigoBarras}"></td>
                      <td th:text="${produto.preco}"></td>
+                     <td th:text="${produto.descricao}"></td>
                      <td> 
-                        <a href="#" class="btn btn-primary">
-                         <i class="fas fa-edit ml-2">Editar</i>
+                        <a href="#" class="btn btn-primary my-2 ">
+                         <i class="fas fa-edit ml-2"></i>
+                         Editar
                         </a>
                     </td>
                 </tr>
         </tbody>
     </table>
      </div> 
-    </div>
+    </main>
 </body>
 </html>
