--- a/src/main/resources/templates/novo-produto.html
+++ b/src/main/resources/templates/novo-produto.html
@@ -7,8 +7,7 @@
     <title>Novo Produto</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous"> 
-    <h2 class="my-5">Cadastro de Produtos</h2>
-</div>  
+     
 </head>
 <body>
     <main class="container bg-light mt-4">
@@ -19,6 +18,39 @@
                         Todos Produtos
                 </a>
                 <h2>Novo Produto</h2>
+            </div>
+            <div class="row">
+                <form action="" method="post">
+                    <div class="row">
+                        <div class="form-group col-md-12">
+                            <label for="nome" class="col-form-label">Nome:</label>
+                            <input type="text" id="nome" placeholder="Nome"></label>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="descricao" class="col-form-label">Descrição:</label>
+                            <textarea id="descricao" class="form-control" rows="4" placeholder="Descrição"></textarea>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="codigoBarras" class="col-form-label">Código de Barras:</label>
+                            <input type="text" id="codigoBarras" placeholder="Código de Barras"></label>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="preco" class="col-form-label">Preço:</label>
+                            <input type="text" id="preco" placeholder="Preço"></label>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="tipoProd" class="col-form-label">Tipo de Produto:</label>
+                            <select name="tipoProd" class="form-control">
+                                <option>Escolha o tipo</option>
+                                <option>Linha Branca</option>
+                                <option>Eletrônicos</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-12">
+                           <input type="submit" class="btn btn-primary mb-2" value="Gravar Novo Produto">
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
